nohup.out
 * Serving Flask app 'testapp'
 * Debug mode: on
WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://172.26.230.140:5000
Press CTRL+C to quit
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 107-187-322
172.26.224.1 - - [05/Apr/2024 13:59:02] "GET / HTTP/1.1" 200 -
 * Detected change in '/mnt/c/Users/akira/OneDrive/デスクトップ/nutry_01/testapp/views.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 107-187-322
172.26.224.1 - - [05/Apr/2024 13:59:24] "GET / HTTP/1.1" 200 -
172.26.224.1 - - [05/Apr/2024 13:59:28] "GET / HTTP/1.1" 200 -
 * Detected change in '/mnt/c/Users/akira/OneDrive/デスクトップ/nutry_01/testapp/views.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 107-187-322
172.26.224.1 - - [05/Apr/2024 13:59:29] "GET / HTTP/1.1" 200 -
 * Detected change in '/mnt/c/Users/akira/OneDrive/デスクトップ/nutry_01/testapp/views.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 107-187-322
 * Detected change in '/mnt/c/Users/akira/OneDrive/デスクトップ/nutry_01/testapp/views.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 107-187-322
 * Detected change in '/mnt/c/Users/akira/OneDrive/デスクトップ/nutry_01/testapp/views.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "/mnt/c/Users/akira/OneDrive/デスクトップ/nutry_01/server.py", line 1, in <module>
    from testapp import app
  File "/mnt/c/Users/akira/OneDrive/デスクトップ/nutry_01/testapp/__init__.py", line 6, in <module>
    import testapp.views
  File "/mnt/c/Users/akira/OneDrive/デスクトップ/nutry_01/testapp/views.py", line 7
    }'1週間の摂取栄養量を計算します。'
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
 * Serving Flask app 'testapp'
 * Debug mode: on
WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://172.26.230.140:5000
Press CTRL+C to quit
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 107-187-322
172.26.224.1 - - [05/Apr/2024 14:08:43] "GET / HTTP/1.1" 200 -
172.26.224.1 - - [05/Apr/2024 14:15:29] "GET / HTTP/1.1" 200 -
172.26.224.1 - - [05/Apr/2024 14:15:30] "GET / HTTP/1.1" 200 -
172.26.224.1 - - [05/Apr/2024 14:15:31] "GET / HTTP/1.1" 200 -
172.26.224.1 - - [05/Apr/2024 14:15:31] "GET / HTTP/1.1" 200 -
172.26.224.1 - - [05/Apr/2024 14:16:49] "GET / HTTP/1.1" 200 -
172.26.224.1 - - [05/Apr/2024 14:16:56] "GET /index2 HTTP/1.1" 404 -
 * Detected change in '/mnt/c/Users/akira/OneDrive/デスクトップ/nutry_01/testapp/views.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 107-187-322
 * Detected change in '/mnt/c/Users/akira/OneDrive/デスクトップ/nutry_01/testapp/views.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 107-187-322
 * Detected change in '/mnt/c/Users/akira/OneDrive/デスクトップ/nutry_01/testapp/views.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 107-187-322
 * Detected change in '/mnt/c/Users/akira/OneDrive/デスクトップ/nutry_01/testapp/views.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 107-187-322
172.26.224.1 - - [05/Apr/2024 14:18:09] "GET /index2 HTTP/1.1" 404 -
172.26.224.1 - - [05/Apr/2024 14:18:10] "GET /index2 HTTP/1.1" 404 -
172.26.224.1 - - [05/Apr/2024 14:18:10] "GET /index2 HTTP/1.1" 404 -
172.26.224.1 - - [05/Apr/2024 14:18:14] "GET /test HTTP/1.1" 200 -
172.26.224.1 - - [05/Apr/2024 14:30:34] "GET /test HTTP/1.1" 200 -
172.26.224.1 - - [05/Apr/2024 14:30:38] "GET / HTTP/1.1" 200 -
172.26.224.1 - - [05/Apr/2024 14:30:40] "GET / HTTP/1.1" 200 -
172.26.224.1 - - [05/Apr/2024 14:32:32] "GET / HTTP/1.1" 200 -
172.26.224.1 - - [05/Apr/2024 14:32:32] "GET /static/css/style.css HTTP/1.1" 200 -
